<resources>
    <string name="app_name">Cat The Builder</string>
    <string name="your_app_name">Your app name</string>
    <string name="your_package_name">Your package name(e.g. com.example.app)</string>
    <string name="your_version">Your app version(e.g. v1.0.5)</string>
    <string name="your_icon">Your icon</string>
    <string name="your_catrobat">Your .catrobat</string>
    <string name="build_app">Build app</string>
    <string name="version_code">Your version code(must be a whole number)</string>
    <string name="copying_assets_to_cache">Copying assets to cache…</string>
    <string name="building_apk">Building app…</string>
    <string name="updating_android_manifest">Updating AndroidManifest…</string>
    <string name="apk_installed">App installed!</string>
    <string name="imported_icon">Icon imported</string>
    <string name="catrobat_imported">.catrobat imported</string>
    <string name="invalid_icon">Invalid icon chosen!</string>
    <string name="app_name_empty">App name is empty!</string>
    <string name="package_empty">Package is empty!</string>
    <string name="version_empty">Version is empty!</string>
    <string name="version_code_empty">Version code is empty!</string>
    <string name="catrobat_not_chosen">.catrobat not chosen!</string>
    <string name="icon_not_chosen">Icon not chosen!</string>
    <string name="invalid_version_code">Invalid version code</string>
    <string name="file_chosen_not_catrobat">Chosen file is not .catrobat</string>
    <string name="invalid_package">Invalid package!</string>
    <string name="advanced_build_options_closed">> Advanced build options</string>
    <string name="advanced_build_options_open">v Advanced build options</string>
    <string name="debuggable">Debuggable</string>
    <string name="custom_round_icon">Use custom round icon</string>
    <string name="auto_resize_round_icon">Resize round icon automatically</string>
    <string name="use_adaptive_icon">Use adaptive icon</string>
    <string name="language_is">"Language: "</string>
    <string name="english" translatable="false">English</string>
    <string name="ukrainian" translatable="false">Українська</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="credits">Credits</string>
    <string name="warning">Warning</string>
    <string name="security_warning">Security Warning!</string>
    <string name="quit_right_now">Quit right now!!!</string>
    <string name="new_update_available">New Update Available!</string>
    <string name="update">Update</string>
    <string name="i_dont_care">I don\'t care...</string>
    <string name="okay">Okay</string>

</resources>