<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:fontFamily="serif"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:id="@+id/ellipsis_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ellipsis_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/build_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/app_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/appname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_app_name"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/packagename_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/packagename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_package_name"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/version_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_version"
                    android:inputType="text"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/version_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/version_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/version_code"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/icon_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_icon"
            android:textSize="20sp"
            android:fontFamily="serif"/>

        <Button
            android:id="@+id/file_picker_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_catrobat"
            android:textSize="20sp"
            android:fontFamily="serif"/>

        <TextView
            android:id="@+id/action"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"/>

            <Button
                    android:id="@+id/advanced_build_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/advanced_build_options_closed"
                    android:textSize="18sp"
                    android:textColor="?attr/colorSecondary"
                    android:textAlignment="textStart"
                    android:fontFamily="monospace"
                    android:backgroundTintMode="multiply"
                    android:backgroundTint="#00FFFFFF"/>

            <LinearLayout
                    android:id="@+id/more_build_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="visible"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    <CheckBox
                            android:id="@+id/debug_option"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:focusable="false"
                            android:clickable="true"/>

                    <TextView
                            android:id="@+id/debug_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/debuggable"
                            android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    <CheckBox
                            android:id="@+id/auto_resizable_round_icon_option"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:focusable="false"
                            android:clickable="true"/>

                    <TextView
                            android:id="@+id/auto_resizable_round_icon_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_resize_round_icon"
                            android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">


                    <CheckBox
                            android:id="@+id/use_adaptive_icon_option"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:focusable="false"
                            android:clickable="true"/>

                    <TextView
                            android:id="@+id/use_adaptive_icon_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/use_adaptive_icon"
                            android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/build_button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/build_app"
        android:textSize="20sp"
        android:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>