<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">
        <my.consler.catthebuilder.helper.LanguageTextView
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/english"
                android:textColor="@color/material_dynamic_primary100"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:fontFamily="serif"
                android:layout_marginTop="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <my.consler.catthebuilder.helper.LanguageTextView
                android:id="@+id/ukrainian"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/ukrainian"
                android:textColor="@color/material_dynamic_primary100"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:fontFamily="serif"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <my.consler.catthebuilder.helper.LanguageTextView
                android:id="@+id/russian"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/russian"
                android:textColor="@color/material_dynamic_primary100"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:fontFamily="serif"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <my.consler.catthebuilder.helper.LanguageTextView
                android:id="@+id/german"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/german"
                android:textColor="@color/material_dynamic_primary100"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:fontFamily="serif"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>